--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta property="og:title" content="Your Fan Book" />
+    <meta property="og:description" content="Are you a true Saitama fan? if so, let's click on this link" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -14,7 +18,9 @@
         crossorigin="anonymous"></script>
 
     <title>Fan Book</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Playfair+Display:wght@500&display=swap"
+        rel="stylesheet">
     <style>
         * {
             font-family: 'Merriweather', serif;
